# Hershey-TTF

hershey-ttf/: pyproject.toml
hershey-ttf/src/hershey_ttf/: __init__.py  hmpparser.py  main.py  ocxparser.py  svggenerator.py
