[project]
name = "hershey-ttf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "illusoryemotion", email = "20957381+illusoryemotion@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "svgwrite>=1.4.3",
]

[project.scripts]
hershey-ttf = "hershey_ttf:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
